# TicTacToe

./: Main.hs  cabal.project.freeze  tictactoe.cabal
lib/: TicTacToe.hs
test/: TicTacToeTest.hs
