cabal-version:       >=1.10
name:                tictactoe
version:             0.1.0.0
-- synopsis: a simple command-line TicTacToe game
author:              pakaelbling
maintainer:          pakaelbling@gmail.com
build-type:          Simple

library tictactoelib
  exposed-modules: TicTacToe
  build-depends: base
  default-language: Haskell2010
  hs-source-dirs: lib


executable tictactoe
  main-is: Main.hs
  build-depends: base >=4.14 && <4.15, tictactoelib
  default-language: Haskell2010

test-suite tests
   type: exitcode-stdio-1.0
   default-language: Haskell2010
   hs-source-dirs: test
   main-is: TicTacToeTest.hs
   build-depends: base, HUnit, tictactoelib, silently
